[project]
name = "lesson19"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.20.0",
    "graphviz>=0.21",
    "ipykernel>=7.3.0",
    "openai-agents[mongodb,viz]>=0.18.0",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
]
